<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.mainSearch.view.SearchFragment">

    <!-- 🔍 EditText for Search -->
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/search"
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_search"
        android:padding="12dp"
        android:textSize="16sp"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- 🔘 Filter Chips -->
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:backgroundTint="@color/orangeOpacity"
            android:textColor="@color/black"
            style="@style/Widget.Material3.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient"
            android:backgroundTint="@color/orangeOpacity"
            android:textColor="@color/black"
            style="@style/Widget.Material3.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:backgroundTint="@color/orangeOpacity"
            android:textColor="@color/black"
            style="@style/Widget.Material3.Chip.Filter" />
    </com.google.android.material.chip.ChipGroup>

    <!-- 📜 RecyclerView for Ingredients -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        tools:listitem="@layout/search_item"
        android:paddingBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
